# RKDG3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rebuild_lib_and_app.sh
cases/KG/: settings.yml
cases/conv_div_nozzle/: settings.yml
cases/doubleMach/: settings.yml
cases/forwardStep/: out  settings.yml
cases/munday/: settings.yml
cases/munday1p5/: settings.yml
cases/munday_struct/: settings.yml
cases/munday_struct_1p5/: settings.yml
cases/munday_subs/: settings.yml
cases/overexpandedJet0p25/: jet.msh  settings.yml
cases/overexpandedJet0p5/: settings.yml
cases/pulse-bounds/: settings.yml
cases/pulse-periodic/: settings.yml
cases/quite/: settings.yml
cases/sod1d_covolume/: settings.yml  sod2d.msh
cases/sod1d_diag/: settings.yml
cases/sod1d_simple/: settings.yml  sod1d_quad.msh  sod1d_quad6.msh  sod1d_trian.msh
cases/sod2D/: settings.yml  sod2d.msh
cases/sod2d/: settings.yml
cases/sod3d/: settings.yml
cases/wing/: settings.yml
gmsh/: astro.geo  bump.geo  convDivNozzle.geo  disk.geo  dm.geo  forwardStep.geo  jet.geo  jet3D.geo  nozzleMundak.geo  nozzleMundakBlocked.geo  nozzleMunday.geo  periodicOpenRibbon.geo  periodicSquare.geo  quirk.geo  quirk.msh  sod1d.geo  sod2d.geo  sod3d.geo  sod3d_2.geo
paraview/: bump.pvsm
src/: dg.hpp  dg_conf.hpp
src/amr/: amr.cpp  amr.hpp  local_refiner.hpp
src/averager/: averager.cpp  averager.hpp
src/bc/: boundary_integrator.cpp  boundary_integrator.hpp  boundary_integrator_char_outlet.cpp  boundary_integrator_char_outlet.hpp  boundary_integrator_constant.cpp  boundary_integrator_constant.hpp  boundary_integrator_open.cpp  boundary_integrator_open.hpp  boundary_integrator_open_fixed_pressure.cpp  boundary_integrator_open_fixed_pressure.hpp  boundary_integrator_open_total_pressure.cpp  boundary_integrator_open_total_pressure.hpp  boundary_integrator_slip.cpp  boundary_integrator_slip.hpp  boundary_integrator_subsonic_inlet.cpp  boundary_integrator_subsonic_inlet.hpp  boundary_integrator_subsonic_inlet_fixed_pressure.cpp  boundary_integrator_subsonic_inlet_fixed_pressure.hpp  boundary_integrator_subsonic_inlet_total_pressure.cpp  boundary_integrator_subsonic_inlet_total_pressure.hpp  boundary_integrator_supersonic_inlet.cpp  boundary_integrator_supersonic_inlet.hpp  boundary_integrator_wall.cpp  boundary_integrator_wall.hpp
src/case_manager/: case_manager.cpp  case_manager.hpp
src/eq_terms/: domain_integrator.cpp  domain_integrator.hpp  face_integrator.cpp  face_integrator.hpp
src/fe_evolution/: fe_evolution.cpp  fe_evolution.hpp
src/indicator/: indicator.cpp  indicator.hpp  indicator_bj.cpp  indicator_bj.hpp  indicator_everywhere.hpp  indicator_michalak.cpp  indicator_michalak.hpp  indicator_nowhere.hpp  indicator_shu.cpp  indicator_shu.hpp  indicator_venkatakrishnan.cpp  indicator_venkatakrishnan.hpp
src/initial_conditions/: ic.hpp
src/limiter/: limiter.cpp  limiter.hpp  limiter_bj.cpp  limiter_bj.hpp  limiter_findiff.cpp  limiter_findiff.hpp  limiter_multiplier.cpp  limiter_multiplier.hpp  limiter_none.hpp
src/ode_solver/: rk_explicit_limited.cpp  rk_explicit_limited.hpp
src/physics/: physics.cpp  physics.hpp
src/postprocessing/: check_total_energy.cpp  check_total_energy.hpp
src/riemannsolvers/: rs_basic.cpp  rs_basic.hpp  rs_hll.cpp  rs_hll.hpp  rs_hllc.cpp  rs_hllc.hpp  rs_llf.cpp  rs_llf.hpp  rs_rusanov.cpp  rs_rusanov.hpp
src/stencil/: stencil.hpp
